--- a/CSS/informes.css
+++ b/CSS/informes.css
@@ -1,47 +1,18 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900');
-@import url(estilos.css);
 
-body {
-background-color:rgb(235, 245, 251);
-margin: 0%;
-font-family: roboto;
-}
-p {
-    font-size: 12px;
-    color: #333;
-    font-family: Roboto, sans-serif;
-
-}
-h1 {
-    font-size: 26px;
-    color: #333;
-    font-family: Roboto, sans-serif;
-    padding-bottom: 20px;
-}
-
-h2 {
-    font-size: 22px;
-    color: #333; 
-    font-family: Roboto, sans-serif;
-}
-.logo {    
-    
-    display: inline-block;
-    vertical-align: middle;
-    margin-right: 10px;
-    width: 150px;
-}
 .dir {
     display: inline-block;
     vertical-align: middle;
     text-decoration: none;
     color: white;
 }
+
 nav {
     font-weight: bold;
     background-color: rgb(59, 59, 59);
     display: flex; 
     align-items: center;
+    
 
 }
 nav p{
@@ -68,16 +39,148 @@ nav a {
     margin-left: 800px;
     background-color: #9e9e9e;
     color: black;
-    
+    font-weight: bold;
+} 
+.texto-elecciones-chico {
+    font-size: 12px;
+    color: var(--textos);
+
 }
-.gen {
-    background-color: #ee3d8f;
-}
-footer p {
-    color: #9e9e9e;
+.texto-path-chico {
+    font-size: 11px;
+    color: var(--celeste);
 }
 
-footer {
-    margin: 0%;
-    background-color:  black;
+table {
+    margin: 0 auto 50px auto;
+    border-radius: 15px;
+    border: 3px solid --borde-Grilla;
+    background-color: rgb(250, 250, 250);
+    color: var(--titulo-grilla)
+}
+td {
+    background-color: rgb(255, 255, 255);
+    border-bottom: 1px solid --borde-inferior-Grilla;
+    padding: 15px 0px;
+    font-size: 12px;
+    border-collapse: collapse;
+}
+.tabla-anid {
+    border: 1px solid #dddddd;  
+    border-bottom: 0px;
+    border-top: 0px;
+    border-right: 0px;
+    border-left: 0px;
+    border-collapse: collapse;
+}
+
+.texto-elecciones-chico {
+    font-size: 12px;
+    color: var(--textos);
+    font-weight: bold;
+}
+
+.paso {
+    background-color: #ee3d8f;
+}
+
+.mesas-comp {
+    background-color: var(--celeste);
+    width: 120px; 
+    height: 70px;
+    margin: 2px;
+    font-size: 10px;
+    color: #FFffFF;
+    border-radius: 5px;
+}
+
+.elec {
+    background-color: var(--magenta);
+    width: 120px; 
+    height: 70px;
+    margin: 2px;
+    font-size: 10px;
+    color: #FFffFF;
+    border-radius: 5px;
+    
+
+}
+
+.part-esc {
+    background-color: var(--morado);
+    width: 120px; 
+    height: 70px;
+    margin: 2px;
+    border-radius: 5px;
+    font-size: 10px;
+    color: #FFffFF;
+    vertical-align: center;
+}
+.mesas-comp p {
+    color: white;
+    text-align: center;
+    
+}
+
+.elec p {
+    color: white;
+    text-align: center; /* Centra el contenido de las celdas horizontalmente */
+    
+}    
+
+.part-esc p {
+    color: white;
+    text-align: center;
+   
+}
+.container {
+    display: flex;
+    flex-direction: column;
+  }
+  .mensaje-1 {
+    background-color: var(--mensaje-usuario-verde);
+    width: 400px;
+    margin: 20px auto;
+    padding: 15px;
+    border-radius: 10px;
+    color: #FFffFF;
+    font-size: 12px;
+    font-weight: 200px;
+    text-align: center;
+}
+
+.mensaje-2 {
+    background-color: var(--mensaje-usuario-rojo);
+    width: 400px;
+    margin: 20px auto;
+    padding: 15px;
+    border-radius: 10px;
+    color: #FFffFF;
+    font-size: 12px;
+    font-weight: 200px;
+    text-align: center;
+}
+
+.mensaje-3 {
+    background-color: var(--mensaje-usuario-amarillo);
+    width: 400px;
+    margin: 20px auto;
+    padding: 15px;
+    border-radius: 10px;
+    color: #FFffFF;
+    font-size: 12px;
+    font-weight: 200px;
+    text-align: center;
+}
+.fa-thumbs-up, .fa-exclamation-triangle, .fa-exclamation {
+    margin-right: 5px;
+    font-size: 15px;
+}
+
+.agrupacion {
+    width: 100px;
+    height: 100px;
+    padding: 5px;
+    font-size: 10px;
+    color: var(--textos);
 }
