--- a/CSS/pages/generales.css
+++ b/CSS/pages/generales.css
@@ -13,6 +13,7 @@
 #boton-filtro {
 
     margin-left: 15px;
+    color: var(--textos);
     border: none;
     background-color: white;
     border-radius: 15px;
