--- a/CSS/pages/generales.css
+++ b/CSS/pages/generales.css
@@ -34,8 +34,11 @@
     margin-left: 5px;
 }
 
+.contenedor-boton-inicio {
+    margin-left: auto;
+}
+
 #boton-inicio {
-    margin-left: 748px;
     color: white;
     background-color: var(--gris-claro);
     border-radius: 5px;
@@ -216,9 +219,10 @@ p {
     overflow: hidden;
     border-radius: 25px;
     Border: 1px var(borde-Grilla) solid;
-    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-    min-height: 408px;
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
+    height: 408px;
 }
+
 
 .resumen-titulo {
     overflow: hidden;
@@ -227,16 +231,29 @@ p {
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
+.recuadros-contenedor {
+    display: flex;
+    justify-content: space-between;
+    padding-left: 50px;
+}
+
 
 
 .agrupaciones {
-    padding-left: 50px;
-    overflow: scroll vertical;
-    height: 325px;
+   
+    min-height: 325px;
     border-radius: 25px;
-    Border: 1px var(borde-Grilla) solid;
-    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+    border: 1px var(borde-Grilla) solid;
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
     min-width: 450px;
+    overflow: hidden;
+    
+    
+}
+
+.agrupaciones-contenido {
+    overflow-y: scroll;
+    padding: 10px;
 }
 
 .agrupaciones p,
@@ -262,7 +279,7 @@ p {
 .agrupaciones p3 {
     color: var(--textos);
     font-size: 11px;
-    Padding: 5px;
+    padding-top: 5px;
     text-transform: uppercase;
     font-weight: bold;
 }
@@ -315,7 +332,7 @@ p {
 .resumen {
     border-radius: 25px;
     Border: 1px var(borde-Grilla) solid;
-    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
     min-width: 350px;
 }
 
