--- a/CSS/common.css
+++ b/CSS/common.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900');
-@import 'estilos.css';
+@import 'pages/estilos.css';
 
 * { /*Cambio, lineas blancas al final de la página.*/
     margin: 0;
@@ -185,130 +185,4 @@ footer{
 
 #sec-contenido h3 p {
     font-weight: normal;
-}
-
-.caja-botones{
-    margin-top: 3%;
-    margin-bottom: 3%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: start;
-    
-}
-
-
-
-.boton-paso{
-
-    background-color: var(--magenta);
-    border-radius: 5px;
-    color: white;
-    padding: 2%;
-    width: 400px;
-    height: 100px;
-    margin: 2%;
-    align-self: center;
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
-
-}
-
-.paso-texto {
-    margin-left: 10px;
-}
-
-a, .paso-texto h3 {
-    text-decoration: none;
-    color: white;
-    font-weight: normal;
-
-}
-
-.boton-paso:hover{
-    background-color: var(--gris-claro);
-}
-
-#boton-generales-id {
-    margin-left: 10px;
-}
-
-.boton-generales:hover {
-    color: var(--textos);
-    background-color: #2424245e;
-}
-
-.boton-generales{
-    
-    background-color: var(--celeste);
-    border-radius: 5px;
-    color: white;
-    padding: 2%;
-    width: 400px;
-    height: 100px;
-    margin: 2%;
-    align-self: center;
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
-}
-
-.boton-general:hover{
-    background-color: var(--gris-claro);
-}
-
-a, .generales-texto h3 {
-    text-decoration: none;
-    color: white;
-    font-weight: normal;
-
-}
-
-.texto-encima-botones{
-   justify-content: center;
-   font-size: large;
-}
-
-.active4{
-    background-color: var(--fondo-Menu);
-    color: white;
-    text-decoration: none;
-    padding: 0.5% 1%;
-    box-sizing: border-box;
-    font-size: small;
-    margin-left: 1%;
-
-}
-
-.active2{
-    background-color: var(--magenta);
-    color: white;
-    text-decoration: none;
-    border-radius: 5px;
-    padding: 0.5% 1%;
-    box-sizing: border-box;
-    font-size: small;
-    margin-left: 1%;
-    width: 8%;
-}
-
-.active2:hover{
-    background-color: var(--gris-claro);
-}
-.active3{
-    background-color: var(--fondo-Cabecera);
-    color: white;
-    text-decoration: none;
-    border-radius: 5px;
-    padding: 0.5% 1%;
-    box-sizing: border-box;
-    font-size: small;
-    margin-left: 1%;
-    width: 8%;
-    
-}
-
-.active3:hover{
-    background-color: var(--gris-claro);
 }
