--- a/CSS/pages/generales.css
+++ b/CSS/pages/generales.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900');
+@import 'estilos.css';
 
 
 .menu-principal {
