--- a/CSS/pages/informes.css
+++ b/CSS/pages/informes.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900');
+@import 'estilos.css';
 
 .dir {
     display: inline-block;
@@ -57,6 +58,17 @@
     padding: 10px, 20px;
     border-bottom: 1px solid var(--borde-Grilla);
     font-size: 14px;
+
+}
+
+.active4{
+    background-color: var(--fondo-Menu);
+    color: white;
+    text-decoration: none;
+    padding: 0.5% 1%;
+    box-sizing: border-box;
+    font-size: small;
+    margin-left: 1%;
 
 }
 
