--- a/CSS/pages/informes.css
+++ b/CSS/pages/informes.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900');
 
+.reporte{
+    padding-left: 100px;
+}
+
 .dir {
     display: inline-block;
     vertical-align: middle;
@@ -22,25 +26,39 @@ nav p{
     margin-right: 5px;
 }
 nav a {
-    width:25%; 
-    height: 16px;
-    text-align: center;
-    font-size: 13px;
+    background-color: var(--fondo-Cabecera);
+    color: white;
     text-decoration: none;
-    color: #FFffFF;
-    vertical-align: middle;
-    margin-left: 5px;
-    padding: 5px;
-    border-radius: 5px; 
-    background-color: #37bbed; 
+    border-radius: 5px;
+    padding: 0.5% 1%;
+    box-sizing: border-box;
+    font-size: small;
+    margin-left: 1%;
+    width: 8%; 
+    font-size: 12px;
+    text-align: center;
 } 
 
+nav a:hover{
+    background-color: var(--gris-claro);
+}
+
 .inicio {
-    margin-left: 800px;
-    background-color: #9e9e9e;
-    color: black;
-    font-weight: bold;
+    margin-left: 67%;
+    color: white;
+    background-color: var(--gris-claro);
+    border-radius: 5px;
+    border: none;
+    font-family: #fff;
+    font-size: 12px;
+    text-transform: uppercase;
+    width: 100px;
+    height: 30px;
+    cursor: pointer;
 } 
+.inicio:hover{
+    color:var(--textos);
+}
 .texto-elecciones-chico {
     font-size: 12px;
     color: var(--textos);
@@ -51,25 +69,32 @@ nav a {
     color: var(--celeste);
 }
 
-table {
+.general {
+    max-width: 1024px;
     margin: 0 auto 50px auto;
+    border-collapse: separate;
+    border: 1px solid black;
     border-radius: 15px;
-    border: 3px solid --borde-Grilla;
     background-color: rgb(250, 250, 250);
-    color: var(--titulo-grilla)
 }
-td {
+
+
+tbody {
     background-color: rgb(255, 255, 255);
-    padding: 15px 0px;
-    font-size: 12px;
     border-collapse: collapse;
+    border-bottom: 1px solid var(--borde-inferior-grilla);
+    font-size: 12px;
+    
+}
+
+
+
+tbody tr:hover{
+    background-color: rgb(250, 250, 250);
 }
 .tabla-anid {
     border: 1px solid #dddddd;  
-    border-bottom: 0px;
-    border-top: 0px;
-    border-right: 0px;
-    border-left: 0px;
+    border: 0px;
     border-collapse: collapse;
 }
 
@@ -86,18 +111,17 @@ td {
 .mesas-comp {
     background-color: var(--celeste);
     border-radius: 10px;
-    margin: 15px;
+    margin: 2px;
     width: 140px;
     height: 60px;
     padding: 0.5rem 1rem;
-    align-items: center;
     display: flex;
-
+    align-items: center;
 }
 .elec {
     background-color: var(--magenta);
     border-radius: 10px;
-    margin: 15px;
+    margin-bottom: 2px;
     width: 140px;
     height: 60px;
     padding: 0.5rem 1rem;
@@ -108,7 +132,7 @@ td {
 .part-esc {
     background-color: var(--morado);
     border-radius: 10px;
-    margin: 15px;
+    margin: 2px;
     width: 140px;
     height: 60px;
     padding: 0.5rem 1rem;
@@ -119,24 +143,18 @@ td {
     display: flex;
     flex-direction: column;
     color: white;
-    text-align: center;
-    
-    
-    
 }
 
 .elec p {
+    display: flex;
+    flex-direction: column;
     color: white;
-    color: #fff;
-    margin-bottom: 0px;
 }    
 
 .part-esc p {
     display: flex;
     flex-direction: column;
     color: white;
-
-   
 }
 .container {
     display: flex;
@@ -206,12 +224,13 @@ td {
     display: flex;
     flex-direction: column;
 }
-.tab1 {
+.tab-1 {
     border: none;
     border-collapse: collapse;
 }
-td, .sep {
+.sep {
     padding-left: 18px;
+    padding-right: 18px;
 }
 .sep1 {
     padding-left: 50px;
