--- a/CSS/pages/generales.css
+++ b/CSS/pages/generales.css
@@ -424,3 +424,12 @@ p {
     display: inline-block;
     white-space: nowrap;
 }
+
+#filtro-año {
+    width: 70px;
+}
+
+#filtro-distrito, #filtro-cargo {
+
+   width: 140px;
+}
