--- a/CSS/pages/paso.css
+++ b/CSS/pages/paso.css
@@ -448,7 +448,7 @@ p {
     width: 70px;
 }
 
-#filtro-distrito, #filtro-cargo {
+#filtro-distrito, #filtro-cargo, #filtro-seccion {
 
-   width: 140px;
+   width: 140px;
 }
